// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The HundredXClient > should initialise correctly with all config parameters passed 1`] = `
HundredXClient {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthMessage": [Function],
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": 168587773,
  "ciaoAddress": "0x0c3b9472b3923cfe199bae24b5f5bd75fad2bae9",
  "deposit": [Function],
  "domain": {
    "chainId": 168587773n,
    "name": "100x",
    "verifyingContract": "0x02ca4fcb63e2d3c89fa20d86ccdcfc540c683545",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [
    {
      "msg": "Debug mode enabled",
    },
  ],
  "placeOrder": [Function],
  "placeOrders": [Function],
  "privateKey": "0xa608cd43cbc3d59bc51443f475b96a4654e956d6cc91783598a8e76a34000174",
  "rpc": "https://test-rpc.quiknode.pro",
  "subAccountId": 2,
  "verifierAddress": "0x02ca4fcb63e2d3c89fa20d86ccdcfc540c683545",
  "withdraw": [Function],
}
`;

exports[`The HundredXClient > should initialise correctly with only required params 1`] = `
HundredXClient {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthMessage": [Function],
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": 168587773,
  "ciaoAddress": "0x0c3b9472b3923cfe199bae24b5f5bd75fad2bae9",
  "deposit": [Function],
  "domain": {
    "chainId": 168587773n,
    "name": "100x",
    "verifyingContract": "0x02ca4fcb63e2d3c89fa20d86ccdcfc540c683545",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [],
  "placeOrder": [Function],
  "placeOrders": [Function],
  "privateKey": "0xa608cd43cbc3d59bc51443f475b96a4654e956d6cc91783598a8e76a34000174",
  "rpc": "https://sepolia.blast.io",
  "subAccountId": 1,
  "verifierAddress": "0x02ca4fcb63e2d3c89fa20d86ccdcfc540c683545",
  "withdraw": [Function],
}
`;
